[FIX] <pro>Button: Fix the problem that Tooltip will be displayed even if the content is overflow when the tooltip is overflow.

--- a/components-pro/form/style/index.less
+++ b/components-pro/form/style/index.less
@@ -20,6 +20,11 @@
 
     &.auto-width {
       table-layout: auto;
+
+      .@{field-prefix-cls}-label,
+      .@{field-prefix-cls}-label-vertical {
+        white-space: nowrap;
+      }
     }
   }
 
